--- a/course_view.html
+++ b/course_view.html
@@ -7,19 +7,18 @@
     <title>Course View - LMS</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>
-        <h2>LMS - Course View</h2>
     </header>
     <div>
-        <nav>
-            <a href="index.html">Homepage</a>
+        <nav class="navbar">
+            <a href="index.html" class="navbar-item">Homepage</a>
         </nav>
     </div>
     <main>
-        <label for="term">Select Term:</label>
-        <select id="term" name="term">
+        <label for="term" style="align-self: center;">Select Term:</label>
+        <select id="term" name="term" class="term-selection">
             <option value="Winter 2025">Winter 2025</option>
             <option value="Winter 2024">Winter 2024</option>
             <option value="Fall 2025">Fall 2025</option>
@@ -29,12 +28,12 @@
         <section class="Enrolled">
 			<!-- Courses in which the student is enrolled -->
             <!-- Display Course 1, 2, and 3 in the same line -->
-            <h2>Enrolled Courses</h2>
+            <h2 style="text-align: center; color: #004080; font-family: Arial, Helvetica, sans-serif;">Enrolled Courses</h2>
             <hr>
             <table>
 				<tr>
 					<td>
-						<div>
+						<div class="course-tile">
                             <img src="course1.jpg" alt="Course 1" width="250">
                             <p>Course Name: Web Development</p>
                             <p>Course Code: WD381</p>
@@ -42,7 +41,7 @@
                         </div>
 					</td>
 					<td>
-						<div>
+						<div class="course-tile">
                             <img src="course1.jpg" alt="Course 1" width="250">
                             <p>Course Name: Data Structures</p>
                             <p>Course Code: DS371</p>
@@ -50,7 +49,7 @@
                         </div>
 					</td>
                     <td>
-						<div>
+						<div class="course-tile">
                             <img src="course1.jpg" alt="Course 1" width="250">
                             <p>Course Name: DBMS</p>
                             <p>Course Code: DB346</p>
@@ -61,7 +60,7 @@
 				<!-- Display Course 4 and 5 in the same line -->
 				<tr>
 					<td>
-						<div>
+						<div class="course-tile">
                             <img src="course1.jpg" alt="Course 1" width="250">
                             <p>Course Name: Software Testing</p>
                             <p>Course Code: ST484</p>
@@ -69,7 +68,7 @@
                         </div>
 					</td>
 					<td>
-						<div>
+						<div class="course-tile">
                             <img src="course1.jpg" alt="Course 1" width="250">
                             <p>Course Name: Software Architectures</p>
                             <p>Course Code: SA396</p>
@@ -87,33 +86,33 @@
         <section class="Enrolled">
 			<!-- Courses in which the student is enrolled -->
             <!-- Display Course 1, 2, and 3 in the same line -->
-            <h2>Pending Invitations</h2>
+            <h2 style="text-align: center; color: #004080; font-family: Arial, Helvetica, sans-serif;">Pending Invitations</h2>
             <hr>
             <table>
 				<tr>
 					<td>
-                        <div>
+                        <div class="course-tile">
                             <img src="course2.jpg" alt="Course 2" width="250">
                             <p>Course Name: Data Science</p>
                             <p>Course Code: DS102</p>
-                            <button style="background-color: rgb(153, 255, 153);">Accept</button>
-                            <button style="background-color: rgb(252, 133, 133);">Decline</button>
+                            <button class="accept-button">Accept</button>
+                            <button class="decline-button">Decline</button>
                         </div>
                     </td> 
                     <td>
-                        <div>
+                        <div class="course-tile">
                             <img src="course2.jpg" alt="Course 2" width="250">
                             <p>Course Name: Machine Learning</p>
                             <p>Course Code: ML105</p>
-                            <button style="background-color: rgb(153, 255, 153);">Accept</button>
-                            <button style="background-color: rgb(252, 133, 133);">Decline</button>
+                            <button class="accept-button">Accept</button>
+                            <button class="decline-button">Decline</button>
                         </div>
                     </td> 
                 </tr>
             </table>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy; 2025 LMS. All rights reserved.</p>
     </footer>
 </body>
