--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,22 +7,22 @@
     <title>Leaderboard - LMS</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>        
     </header>
 
     <div>
-        <nav>
-            <a href="index.html">Homepage</a> | 
-            <a href="course_view.html">Courses</a> 
+        <nav class="navbar">
+            <a href="index.html" class="navbar-item">Homepage</a> | 
+            <a href="course_view.html" class="navbar-item">Courses</a> 
         </nav>
     </div>
 
     <main>
         <br>
         <br>
-        <table border="1" style="border-collapse: collapse; width: 100%; text-align: center;font-size: 20px;">
+        <table border="1" style="border-collapse: collapse; width: 100%; text-align: center;font-size: 20px; font-family: Arial, Helvetica, sans-serif; border: 5px white;">
             <tr style="background-color: #4CAF50; color: white;font-size: 36px;">
                 <th colspan="5">Leaderboard</th>
             </tr>
@@ -33,43 +33,43 @@
                 <th>Total Score</th>
                 <th>Course</th>
             </tr>
-            <tr style="background-color: #FFD700;">
+            <tr style="background-color: #FFD700; border: 2px white;">
                 <td>1</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>John Doe</td>
                 <td>95</td>
                 <td>Web Development</td>
             </tr>
-            <tr style="background-color: #C0C0C0;">
+            <tr style="background-color: #C0C0C0; border: 2px white;">
                 <td rowspan="2">2</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>Jane Smith</td>
                 <td>90</td>
                 <td>Data Structures</td>
             </tr>
             <tr style="background-color: #C0C0C0;">
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>Emily White</td>
                 <td>90</td>
                 <td>Algorithms</td>
             </tr>
             <tr style="background-color: #CD7F32;">
                 <td>3</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>Michael Brown</td>
                 <td>85</td>
                 <td>Machine Learning</td>
             </tr>
             <tr style="background-color: #f9f9f9;">
                 <td>4</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>Sarah Johnson</td>
                 <td>80</td>
                 <td>Networking</td>
             </tr>
             <tr style="background-color: #e4e2e2;">
                 <td>4</td>
-                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;"></td>
+                <td><img src="student.png" alt="Profile Picture" style="width: 50px; height: 50px;" class="profile-picture"></td>
                 <td>Rob Miller</td>
                 <td>75</td>
                 <td>Networking</td>
@@ -77,7 +77,7 @@
         </table>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>&copy; 2025 LMS. All rights reserved.</p>
     </footer>
 </body>
