--- a/attempt_quiz.html
+++ b/attempt_quiz.html
@@ -7,19 +7,18 @@
     <title>Attempt Quiz - LMS</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>
-        <h2>LMS - Attempt Quiz</h2>
     </header>
     <div>
-        <nav>
-            <a href="index.html">Homepage</a> | 
-            <a href="course_view.html">Courses</a> 
+        <nav class="navbar">
+            <a href="index.html" class="navbar-item">Homepage</a> | 
+            <a href="course_view.html" class="navbar-item">Courses</a> 
         </nav>
     </div>
     <main>
-        <img src="banner.jpg" alt="Quiz Banner" style="width: 100%;">
+        <img src="banner.jpg" alt="Quiz Banner" style="width: 100%; height:150px; border-radius: 5px;">
         <h2>Course: Web Development</h2>
         <p>Topic: HTML Basics</p>
         <p>Last Date: February 10, 2025</p>
@@ -48,7 +47,7 @@
             <br><br>
         </form>
     </main>
-    <footer>
+    <footer class="footer">
         <p>&copy; 2025 LMS. All rights reserved.</p>
     </footer>
 </body>
