Finished attempt quiz and fixed login

--- a/attempt_quiz.html
+++ b/attempt_quiz.html
@@ -18,12 +18,15 @@
         </nav>
     </div>
     <main class="course_quiz_detail">
+
         <img src="banner.jpg" alt="Quiz Banner" style="width: 100%; height:150px; border-radius: 5px;">
-        <h2>Course: Web Development</h2>
-        <h2>Course Code: WD381</h2>
-        <p>Topic: HTML Basics</p>
-        <p>Last Date: February 10, 2025</p>
-        <p>Attempts Allowed: 1</p>
+        <div class = "quiz_explaination">
+            <h2>Course: Web Development</h2>
+            <h2>Course Code: WD381</h2>
+            <p>Topic: HTML Basics</p>
+            <p>Last Date: February 10, 2025</p>
+            <p>Attempts Allowed: 1</p>
+        </div>
     
         <h3>Question 1</h3>
         <p>What does HTML stand for?</p>
