--- a/login.html
+++ b/login.html
@@ -24,12 +24,13 @@
             
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" class="input-fields" required><br><br>
-
-            
-            <button type="submit" formaction="course_view.html" class="login-button">Login</button><br><br>
-            <a href="#" class="forgot-password">Forgot Password?</a>
-
         </form>
+
+        <div class = "container">
+            <button type="submit" formaction="course_view.html" class="login-button">Login</button>
+            <a href="#" class="forgot-password">Forgot Password?</a>
+        </div>
+
     </main>
     <footer class="footer">
         <p>&copy; 2025 LMS. All rights reserved.</p>
