Momentary solution for course_view Term Selection

--- a/course_view.html
+++ b/course_view.html
@@ -17,13 +17,15 @@
         </nav>
     </div>
     <main>
-        <label for="term" style="align-self: center;">Select Term:</label>
-        <select id="term" name="term" class="term-selection">
-            <option value="Winter 2025">Winter 2025</option>
-            <option value="Winter 2024">Winter 2024</option>
-            <option value="Fall 2025">Fall 2025</option>
-            <option value="Fall 2024">Fall 2024</option>
-        </select>
+        <div class = "container2">
+            <label for="term" style="align-self: center;">Select Term:</label>
+            <select id="term" name="term" class="term-selection">
+                <option value="Winter 2025">Winter 2025</option>
+                <option value="Winter 2024">Winter 2024</option>
+                <option value="Fall 2025">Fall 2025</option>
+                <option value="Fall 2024">Fall 2024</option>
+            </select>
+        </div>
         
         <section class="Enrolled">
 			<!-- Courses in which the student is enrolled -->
