--- a/course_view.html
+++ b/course_view.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Course View - LMS</title>
 </head>
-<body>
+<body style="font-family: Arial, Helvetica, sans-serif; text-align: center;">
     <header class="header">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>
@@ -17,7 +17,8 @@
         </nav>
     </div>
     <main>
-        <label for="term" style="align-self: center;">Select Term:</label>
+        <br>
+        <label for="term">Select Term:</label>
         <select id="term" name="term" class="term-selection">
             <option value="Winter 2025">Winter 2025</option>
             <option value="Winter 2024">Winter 2024</option>
@@ -28,13 +29,13 @@
         <section class="Enrolled">
 			<!-- Courses in which the student is enrolled -->
             <!-- Display Course 1, 2, and 3 in the same line -->
-            <h2 style="text-align: center; color: #004080; font-family: Arial, Helvetica, sans-serif;">Enrolled Courses</h2>
+            <h2 style="color: #004080;">Enrolled Courses</h2>
             <hr>
-            <table>
+            <table style="width: 100%">
 				<tr>
 					<td>
 						<div class="course-tile">
-                            <img src="course1.jpg" alt="Course 1" width="250">
+                            <img src="course1.jpg" alt="Course 1" width="100%">
                             <p>Course Name: Web Development</p>
                             <p>Course Code: WD381</p>
                             <a href="attempt_quiz.html">Attempt Quiz</a>
@@ -42,7 +43,7 @@
 					</td>
 					<td>
 						<div class="course-tile">
-                            <img src="course1.jpg" alt="Course 1" width="250">
+                            <img src="course1.jpg" alt="Course 1" width="100%">
                             <p>Course Name: Data Structures</p>
                             <p>Course Code: DS371</p>
                             <a href="attempt_quiz.html">Attempt Quiz</a>
@@ -50,8 +51,8 @@
 					</td>
                     <td>
 						<div class="course-tile">
-                            <img src="course1.jpg" alt="Course 1" width="250">
-                            <p>Course Name: DBMS</p>
+                            <img src="course1.jpg" alt="Course 1" width="100%">
+                            <p>Course Name: Database Systems</p>
                             <p>Course Code: DB346</p>
                             <a href="attempt_quiz.html">Attempt Quiz</a>
                         </div>
@@ -61,7 +62,7 @@
 				<tr>
 					<td>
 						<div class="course-tile">
-                            <img src="course1.jpg" alt="Course 1" width="250">
+                            <img src="course1.jpg" alt="Course 1" width="100%">
                             <p>Course Name: Software Testing</p>
                             <p>Course Code: ST484</p>
                             <a href="attempt_quiz.html">Attempt Quiz</a>
@@ -69,7 +70,7 @@
 					</td>
 					<td>
 						<div class="course-tile">
-                            <img src="course1.jpg" alt="Course 1" width="250">
+                            <img src="course1.jpg" alt="Course 1" width="100%">
                             <p>Course Name: Software Architectures</p>
                             <p>Course Code: SA396</p>
                             <a href="attempt_quiz.html">Attempt Quiz</a>
@@ -86,13 +87,13 @@
         <section class="Enrolled">
 			<!-- Courses in which the student is enrolled -->
             <!-- Display Course 1, 2, and 3 in the same line -->
-            <h2 style="text-align: center; color: #004080; font-family: Arial, Helvetica, sans-serif;">Pending Invitations</h2>
+            <h2 style="color: #004080;">Pending Invitations</h2>
             <hr>
-            <table>
+            <table style="width: 100%;">
 				<tr>
 					<td>
                         <div class="course-tile">
-                            <img src="course2.jpg" alt="Course 2" width="250">
+                            <img src="course2.jpg" alt="Course 2" width="100%">
                             <p>Course Name: Data Science</p>
                             <p>Course Code: DS102</p>
                             <button class="accept-button">Accept</button>
@@ -101,7 +102,7 @@
                     </td> 
                     <td>
                         <div class="course-tile">
-                            <img src="course2.jpg" alt="Course 2" width="250">
+                            <img src="course2.jpg" alt="Course 2" width="100%">
                             <p>Course Name: Machine Learning</p>
                             <p>Course Code: ML105</p>
                             <button class="accept-button">Accept</button>
