Applied font family style to all files body's. Fixed margins

--- a/course_view.html
+++ b/course_view.html
@@ -17,7 +17,7 @@
         </nav>
     </div>
     <main>
-        <label for="term" style="align-self: center;">Select Term:</label>
+        <label for="term">Select Term:</label>
         <select id="term" name="term" class="term-selection">
             <option value="Winter 2025">Winter 2025</option>
             <option value="Winter 2024">Winter 2024</option>
