--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Leaderboard - LMS</title>
 </head>
-<body>
+<body style="font-family: Arial, Helvetica, sans-serif;">
     <header class="header">
         <img src="logo.jpg" alt="LMS Logo" style="width: 100px; height: 100px;">
         <h1>LMS - Learning Management System</h1>        
